# seismometer

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: .bashrc  devcontainer.json  docker-compose.yml
.devcontainer/image/: Dockerfile
.github/: CODEOWNERS  ISSUE_TEMPLATE  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: changelog.yml  ci.yml  doc.yml  pages.yml  static.yml
changelog/: 100.bugfix.rst  101.bugfix.rst  102.feature.rst  108.feature.rst  109.bugfix.rst  111.enhancement.rst  113.feature.rst  114.bugfix.rst  120.bugfix.rst  124.bugfix.rst  131.feature.rst  134.bugfix.rst  138.bugfix.rst  143.bugfix.rst  147.bugfix.rst  149.bugfix.rst  149.feature.rst  150.bugfix.rst  151.bugfix.rst  152.misc.rst  153.bugfix.rst  154.feature.rst  155.misc.rst  158.bugfix.rst  159.feature.rst  160.feature.rst  165.misc.rst  166.feature.rst  168.feature.rst  169.bugfix.rst  170.bugfix.rst  171.feature.rst  173.bugfix.rst  174.feature.rst  175.bugfix.rst  177.bugfix.rst  182.feature.rst  185.misc.rst  186.bugfix.rst  187.bugfix.rst  (+40 more)
docs/: conf.py  index.rst
docs/cli/: index.rst
docs/development/: index.rst
docs/example_notebooks/: index.rst
docs/faq/: index.rst
docs/getting_started/: index.rst
docs/integration_guide/: backend.rst  index.rst  metrics.rst  prometheus.rst
docs/reference/: configuration.rst  index.rst  internals.rst  seismogram.rst  seismometer.rst
docs/release_notes/: index.rst
docs/roadmap/: index.rst
docs/user_guide/: index.rst
example-notebooks/binary-classifier/: classifier_bin.ipynb  config.yml  dictionary.yml  events.parquet  predictions.parquet  usage_config.yml
example-notebooks/feedback/: config.yml  dictionary.yaml  feedback.ipynb  usage_config.yml
src/seismometer/: __init__.py  _api.py  runmetrics.py  seismogram.py
tests/: conftest.py  test_seismogram.py  test_startup.py
tests/api/: test_api_explore.py  test_api_templates.py  test_plots.py  test_reports.py
tests/builder/: test_argparse.py  test_compile.py  test_extract.py  test_jupyter.py
tests/configuration/: test_helpers.py  test_model.py  test_options.py  test_provider.py
tests/controls/: test_categorical.py  test_categorical_single_column.py  test_control_decorators.py  test_explore.py  test_selection.py  test_styles.py  test_thesholds.py  test_thresholds.py
tests/core/: test_autometrics.py  test_decorators.py  test_io.py  test_nbhost.py
tests/data/: test_binary_performance.py  test_cohorts.py  test_data.py  test_events.py  test_filters.py  test_merge_window.py  test_metric_apis.py  test_metric_to_threshold.py  test_otel.py  test_pandas_helpers.py  test_perf_stats.py  test_performance.py  test_summaries.py  test_timeseries.py
tests/html/: test_iframe.py  test_template_apis.py  test_templates.py
tests/integration/: test_building.py
tests/plot/: test_categorical.py  test_categorical_single_column.py  test_cohort_plots.py  test_color_manipulations.py  test_decorators.py  test_likert.py  test_lines.py  test_multi_plots.py  test_utils.py
(+158 files in other folders)
