[build-system]
requires = [
    "setuptools>=72.0.0,<81.0.0",
    "wheel>=0.38.4,<1.0.0"
]
build-backend = 'setuptools.build_meta'

[tool.towncrier]
package = "seismometer"
package_dir = "src"
filename = "docs/release_notes/index.rst"
directory = "changelog"
issue_format = "`#{issue} <https://github.com/epic-open-source/seismometer/issues/{issue}>`__"
title_format = "{version}"
underlines = ["-","~"]

[tool.black]
line-length = 119
target-version = ["py310"]