[metadata]
name = seismometer
version = 0.3.0
description = seismometer: Data Science visualization and investigation tools for AI Trust & Assurance
author = Epic
author_email = OpenSourceContributions-Python@epic.com
license_files = LICENSE.txt
license = BSD 3-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Healthcare Industry
    Framework :: Jupyter :: JupyterLab :: 4
project_urls =
    Source = https://github.com/epic-open-source/seismometer
readme = file: README.md
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.10
zip_safe = True
packages =
    find_namespace:
include_package_data = True
install_requires =
    numpy>=1.26,<2 # >1.26 for python 3.12+
    ipython>=8.14
    ipywidgets>=8.0
    jupyterlab>=4.2.5,<5
    matplotlib>=3.6,<4
    seaborn>=0.13.2,<0.14
    pandas>=1.5.0,<3
    scikit-learn>=1.2.0,<2
    pyarrow>=9.0.0
    pydantic>=2.6.3,<3
    ydata-profiling>=4.8.3,<5
    great-tables>=0.11.0,<1
    numba<0.59

[options.packages.find]
where = src

[options.extras_require]
all =
    %(dev)s
    %(docs)s
dev =
    coverage>=7.5.1
    autopep8>=1.3.5
    pytest-json>=0.4.0
    pytest>=5.1.1
    traitlets>=5.1.1
    pygments>=2.4.1
docs =
    sphinx>=7.2.6
    sphinxawesome-theme>=5.0.0
    docutils>=0.20.1
    nbsphinx>=0.9.0
    nbsphinx_link>=1.0.0
    autodoc_pydantic>=2.0.0
    sphinx_design>=0.5.0
    sphinx-argparse>=0.4.0,<0.5.0
    erdantic>=1.0.0
    pandoc>=2.0


[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::UserWarning
    ignore::PendingDeprecationWarning

[coverage:run]
source = seismometer
branch = True

[coverage:report]
fail_under = 75
omit =
    */plot/mpl/*

[coverage:html]
directory = coverage/html-report

[coverage:xml]
output = coverage/coverage.xml

[tool:isort]
line_length = 119
profile = black

[flake8]
max-line-length = 119
extend-ignore = F821
per-file-ignores =
    # F401 imported but unused
    # F403 wildcard import, unable to detect names
    __init__.py: F401, F403
    decorators.py: F401
    _decorators.py: F401
    # F841 assigned but unused
    src/seismometer/__init__.py: F841
    # F811 redefinition of unused, fixtures
    tests/*: F811
